applications/etherpad/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: etherpad
  name: etherpad
