applications/etherpad/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-issuer
    nginx.ingress.kubernetes.io/server-snippet: |
      location ^~ /admin {
        deny all;
      }
      location ^~ /stats {
        deny all;
      }
  name: meeting-ingress
spec:
  tls:
    - hosts:
        - etherpad.openeuler.org
      secretName: etherpad-tls
  rules:
    - host: etherpad.openeuler.org
      http:
        paths:
          - backend:
              serviceName: etherpad-internal
              servicePort: 80
            path: /
